move example to `examples` directory and add `LICENSE`

--- a/examples/quarto_observable_imports/quarto_observable_imports.html
+++ b/examples/quarto_observable_imports/quarto_observable_imports.html
@@ -81,18 +81,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </style>
 
 
-<script src="quarto_tests_files/libs/clipboard/clipboard.min.js"></script>
-<script src="quarto_tests_files/libs/quarto-html/quarto.js"></script>
-<script src="quarto_tests_files/libs/quarto-html/popper.min.js"></script>
-<script src="quarto_tests_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="quarto_tests_files/libs/quarto-html/anchor.min.js"></script>
-<link href="quarto_tests_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="quarto_tests_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="quarto_tests_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="quarto_tests_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="quarto_tests_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
-<script type="module" src="quarto_tests_files/libs/quarto-ojs/quarto-ojs-runtime.js"></script>
-<link href="quarto_tests_files/libs/quarto-ojs/quarto-ojs.css" rel="stylesheet">
+<script src="quarto_observable_imports_files/libs/clipboard/clipboard.min.js"></script>
+<script src="quarto_observable_imports_files/libs/quarto-html/quarto.js"></script>
+<script src="quarto_observable_imports_files/libs/quarto-html/popper.min.js"></script>
+<script src="quarto_observable_imports_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="quarto_observable_imports_files/libs/quarto-html/anchor.min.js"></script>
+<link href="quarto_observable_imports_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="quarto_observable_imports_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="quarto_observable_imports_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="quarto_observable_imports_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="quarto_observable_imports_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script type="module" src="quarto_observable_imports_files/libs/quarto-ojs/quarto-ojs-runtime.js"></script>
+<link href="quarto_observable_imports_files/libs/quarto-ojs/quarto-ojs.css" rel="stylesheet">
 
 
 </head>
@@ -177,8 +177,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </script>
 <script type="module">
 window._ojs.paths.runtimeToDoc = "..\..\..";
-window._ojs.paths.runtimeToRoot = "..\..\..";
-window._ojs.paths.docToRoot = "";
+window._ojs.paths.runtimeToRoot = "..\..\..\..\..";
+window._ojs.paths.docToRoot = "..\..";
 window._ojs.selfContained = false;
 window._ojs.runtime.interpretFromScriptTags();
 </script>
